对于point内部的save和update进行bug修复以及回归测试，对rosbridge.connect方法进行了再封装